error_templates/java/test_files/unclosed_character_literal_error/test.txt
template: "Java.UnclosedCharacterLiteralError"
---
UnclosedCharacterLiteralError.java:4: error: unclosed character literal
        char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
                  ^
UnclosedCharacterLiteralError.java:4: error: unclosed character literal
        char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
                              ^
2 errors
===
template: "Java.UnclosedCharacterLiteralError"
---
aa
